crates/pg_syntax/tests/snapshots/postgres_regress/line@18.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO LINE_TBL VALUES ('(3asdf,2 ,3,4r2)');"
---
InsertStmt@0..49
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "LINE_TBL"
  Whitespace@20..21 " "
  SelectStmt@21..47
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..47
      AConst@29..47
        Sconst@29..47 "'(3asdf,2 ,3,4r2)'"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

