crates/pg_syntax/tests/snapshots/postgres_regress/line@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO LINE_TBL VALUES ('{0,-1,5}');"
---
InsertStmt@0..41
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "LINE_TBL"
  Whitespace@20..21 " "
  SelectStmt@21..39
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..39
      AConst@29..39
        Sconst@29..39 "'{0,-1,5}'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

